--- a/timeAxixs.html
+++ b/timeAxixs.html
@@ -7,7 +7,7 @@
 <body>
  <div class="desc">
      <ul>
-         <li>lalal</li>
+         <li>lala</li>
          <li>lalal</li>
          <li>lalal</li>
          <li>lalal</li>
